; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_timer.c_tcp_remove_from_time_wait.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_timer.c_tcp_remove_from_time_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inpcb = type { i32 }
%struct.tcpcb = type { i32 }

@INP2_TIMEWAIT = common dso_local global i32 0, align 4
@tcp_tw_tailq = common dso_local global i32 0, align 4
@t_twentry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tcp_remove_from_time_wait(%struct.inpcb* %0) #0 {
  %2 = alloca %struct.inpcb*, align 8
  %3 = alloca %struct.tcpcb*, align 8
  store %struct.inpcb* %0, %struct.inpcb** %2, align 8
  %4 = load %struct.inpcb*, %struct.inpcb** %2, align 8
  %5 = call %struct.tcpcb* @intotcpcb(%struct.inpcb* %4)
  store %struct.tcpcb* %5, %struct.tcpcb** %3, align 8
  %6 = load %struct.inpcb*, %struct.inpcb** %2, align 8
  %7 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @INP2_TIMEWAIT, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = load %struct.tcpcb*, %struct.tcpcb** %3, align 8
  %14 = load i32, i32* @t_twentry, align 4
  %15 = call i32 @TAILQ_REMOVE(i32* @tcp_tw_tailq, %struct.tcpcb* %13, i32 %14)
  br label %16

16:                                               ; preds = %12, %1
  ret void
}

declare dso_local %struct.tcpcb* @intotcpcb(%struct.inpcb*) #1

declare dso_local i32 @TAILQ_REMOVE(i32*, %struct.tcpcb*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
